--- a/formserahterima.html
+++ b/formserahterima.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="color-scheme" content="light only">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="light only" />
   <title>Form Tanda Terima CM</title>
-
-  <!-- PDF.js dan html2pdf.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-
-  <!-- Styles -->
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       font-family: Calibri, sans-serif;
       background-color: #fff;
@@ -26,32 +18,34 @@
     }
 
     .container {
-      max-width: 700px;
-      margin: 0 auto;
+      max-width: 720px;
+      margin: auto;
       padding: 20px;
     }
 
     h1 {
       font-size: 28px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
+    }
+
+    label {
+      font-size: 16px;
     }
 
     input[type="date"] {
-      padding: 8px 12px;
       font-size: 16px;
-      margin-bottom: 10px;
-      width: 100%;
-      max-width: 280px;
+      padding: 6px 10px;
+      margin: 10px auto;
     }
 
     .upload-label {
       display: inline-block;
-      background-color: #007bff;
+      background: #007bff;
       color: white;
       padding: 10px 16px;
       border-radius: 6px;
       cursor: pointer;
-      margin-top: 10px;
+      margin: 12px 6px;
     }
 
     input[type="file"] {
@@ -59,34 +53,57 @@
     }
 
     button {
-      background-color: #007bff;
+      background: #007bff;
       color: white;
       padding: 10px 16px;
-      font-size: 16px;
       border: none;
+      font-size: 16px;
       border-radius: 6px;
+      margin: 8px;
       cursor: pointer;
-      margin: 10px 5px;
     }
 
     #fileCount {
-      margin-left: 8px;
       font-weight: bold;
-      display: inline-block;
+      margin-left: 10px;
     }
 
-    #tabelHasil {
-      margin-top: 30px;
-      overflow-x: auto;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 14px;
+    }
+
+    th, td {
+      border: 1px solid black;
+      padding: 8px;
+    }
+
+    th {
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+
+    #exportArea {
+      max-width: 800px;
+      margin: 30px auto;
+      background: #fff;
+      color: #000;
+      padding: 10px;
+    }
+
+    @media print {
+      body {
+        -webkit-print-color-adjust: exact !important;
+        print-color-adjust: exact !important;
+        background: #ffffff !important;
+        color: #000000 !important;
+      }
     }
 
     @media (max-width: 768px) {
       .container {
         padding: 12px;
-      }
-
-      table {
-        font-size: 12px;
       }
     }
   </style>
@@ -94,132 +111,136 @@
 <body>
   <div class="container">
     <h1>Form Tanda Terima CM</h1>
+    <label for="tanggalSerah">Tanggal Serah Terima:</label><br />
+    <input type="date" id="tanggalSerah" />
 
-    <label for="tanggalSerah">Tanggal Serah Terima:</label><br>
-    <input type="date" id="tanggalSerah">
-
-    <br>
+    <br />
     <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
-    <input type="file" id="multiPdf" multiple accept="application/pdf">
+    <input type="file" id="multiPdf" multiple accept="application/pdf" />
     <span id="fileCount"></span>
 
-    <br>
+    <br />
     <button id="prosesBtn">Proses</button>
-    <button id="downloadBtn" style="display:none">Download PDF</button>
+    <button id="downloadBtn" style="display: none">Download PDF</button>
 
     <div id="tabelHasil"></div>
   </div>
 
   <script>
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
+      "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
+
     let dataTabel = [];
 
     function extractFromPDFText(text) {
-      const lines = text.split('\n').map(line => line.trim());
-      let namaUker = '';
-      const startIndex = lines.findIndex(line => line.toLowerCase().startsWith('unit kerja'));
-
+      const lines = text.split("\\n").map(line => line.trim());
+      let namaUker = "";
+      const startIndex = lines.findIndex(line => line.toLowerCase().startsWith("unit kerja"));
       if (startIndex !== -1) {
-        const collected = [];
-        const match = lines[startIndex].match(/unit kerja\s*:\s*(.*)/i);
-        if (match && match[1]) collected.push(match[1]);
+        const match = lines[startIndex].match(/unit kerja\\s*:\\s*(.*)/i);
+        const collected = match && match[1] ? [match[1]] : [];
         for (let i = startIndex + 1; i < lines.length; i++) {
-          const line = lines[i];
-          if (/kantor cabang|tanggal|pelapor|jenis perangkat|asset id/i.test(line)) break;
-          if (line !== '') collected.push(line);
+          if (/kantor cabang|tanggal|pelapor|jenis perangkat|asset id/i.test(lines[i])) break;
+          if (lines[i] !== "") collected.push(lines[i]);
         }
-        namaUker = collected.join(' ').replace(/^:+\s*/, '').replace(/^\:+/, '').trim();
+        namaUker = collected.join(" ").replace(/^:+\\s*/, "").trim();
       }
 
-      const tanggalTiketMatch = text.match(/Tanggal Tiket\s*:\s*(\d{2}\/\d{2}\/\d{4})/);
-      const tanggalTiket = tanggalTiketMatch ? tanggalTiketMatch[1] : '';
-
+      const tglMatch = text.match(/Tanggal Tiket\\s*:\\s*(\\d{2}\\/\\d{2}\\/\\d{4})/);
+      const tanggalTiket = tglMatch ? tglMatch[1] : "";
       return { namaUker, tanggalPekerjaan: tanggalTiket };
     }
 
     async function prosesFile() {
-      const input = document.getElementById('multiPdf');
-      const files = input.files;
-      const tanggalSerahManual = document.getElementById('tanggalSerah').value;
-      if (!files.length || !tanggalSerahManual) {
-        alert('Isi tanggal dan upload file PDF.');
-        return;
-      }
-      const [y, m, d] = tanggalSerahManual.split('-');
-      const tglSerahFormatted = `${d}/${m}/${y}`;
+      const files = document.getElementById("multiPdf").files;
+      const tgl = document.getElementById("tanggalSerah").value;
+      if (!files.length || !tgl) return alert("Isi tanggal dan pilih file PDF.");
+
+      const [y, m, d] = tgl.split("-");
+      const formattedTgl = `${d}/${m}/${y}`;
       dataTabel = [];
 
       for (let i = 0; i < files.length; i++) {
-        const arrayBuffer = await files[i].arrayBuffer();
-        const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
-        let fullText = '';
+        const buffer = await files[i].arrayBuffer();
+        const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
+        let fullText = "";
         for (let j = 1; j <= pdf.numPages; j++) {
           const page = await pdf.getPage(j);
           const content = await page.getTextContent();
-          fullText += content.items.map(item => item.str).join('\n');
+          fullText += content.items.map(item => item.str).join("\\n");
         }
+
         const { namaUker, tanggalPekerjaan } = extractFromPDFText(fullText);
-        dataTabel.push({ no: i + 1, tanggalSerah: tglSerahFormatted, namaUker, tanggalPekerjaan });
+        dataTabel.push({
+          no: i + 1,
+          tanggalSerah: formattedTgl,
+          namaUker,
+          tanggalPekerjaan
+        });
       }
 
       tampilkanTabel();
-      document.getElementById('downloadBtn').style.display = 'inline-block';
+      document.getElementById("downloadBtn").style.display = "inline-block";
     }
 
     function tampilkanTabel() {
-      const div = document.getElementById('tabelHasil');
-      const html = `<div id="exportArea" style="font-family:Calibri; background:#fff; color:#000; max-width:800px; margin:auto;">
-        <h2 style="text-align:center; font-size:35px;">FORM TANDA TERIMA CM</h2>
-        <table border="1" cellspacing="0" cellpadding="6" style="width:100%;">
-          <thead>
-            <tr style="font-weight:bold; text-transform:uppercase;">
-              <th>No.</th>
-              <th>Tanggal Serah Terima</th>
-              <th>Nama Uker</th>
-              <th>Tanggal Pekerjaan</th>
+      const div = document.getElementById("tabelHasil");
+      const rows = dataTabel
+        .map(
+          row => `
+        <tr>
+          <td>${row.no}</td>
+          <td>${row.tanggalSerah}</td>
+          <td>${row.namaUker}</td>
+          <td>${row.tanggalPekerjaan}</td>
+        </tr>`
+        )
+        .join("");
+
+      div.innerHTML = `
+        <div id="exportArea">
+          <h2 style="text-align:center; font-size:35px;">FORM TANDA TERIMA CM</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>NO.</th>
+                <th>TANGGAL SERAH TERIMA</th>
+                <th>NAMA UKER</th>
+                <th>TANGGAL PEKERJAAN</th>
+              </tr>
+            </thead>
+            <tbody>${rows}</tbody>
+          </table>
+          <br>
+          <table>
+            <tr>
+              <th style="width: 33.33%;">TTD TEKNISI</th>
+              <th style="width: 33.33%;">TTD LEADER</th>
+              <th style="width: 33.33%;">TTD CALL CENTER</th>
             </tr>
-          </thead>
-          <tbody>
-            ${dataTabel.map(row => `<tr>
-              <td>${row.no}</td>
-              <td>${row.tanggalSerah}</td>
-              <td>${row.namaUker}</td>
-              <td>${row.tanggalPekerjaan}</td>
-            </tr>`).join('')}
-          </tbody>
-        </table>
-        <br>
-        <table border="1" cellspacing="0" cellpadding="6" style="width:100%; text-align:center;">
-          <tr>
-            <th style="width:33.33%">TTD TEKNISI</th>
-            <th style="width:33.33%">TTD LEADER</th>
-            <th style="width:33.33%">TTD CALL CENTER</th>
-          </tr>
-          <tr style="height:125px;">
-            <td></td><td></td><td></td>
-          </tr>
-        </table>
-      </div>`;
-      div.innerHTML = html;
+            <tr style="height: 100px;">
+              <td></td><td></td><td></td>
+            </tr>
+          </table>
+        </div>`;
     }
 
     function exportHTMLToPDF() {
-      const content = document.getElementById("exportArea");
-      if (!content) return alert("Klik Proses dulu.");
+      const el = document.getElementById("exportArea");
+      if (!el) return alert("Klik Proses dulu.");
 
-      const clone = content.cloneNode(true);
+      const clone = el.cloneNode(true);
       clone.style.background = "#ffffff";
       clone.style.color = "#000000";
-
-      clone.querySelectorAll('*').forEach(el => {
-        el.style.background = '#ffffff';
-        el.style.color = '#000000';
-        el.style.borderColor = '#000000';
+      clone.querySelectorAll("*").forEach(e => {
+        e.style.background = "#ffffff";
+        e.style.color = "#000000";
+        e.style.borderColor = "#000000";
       });
 
-      const wrapper = document.createElement('div');
-      wrapper.style.position = 'fixed';
-      wrapper.style.left = '-9999px';
+      const wrapper = document.createElement("div");
+      wrapper.style.position = "fixed";
+      wrapper.style.left = "-9999px";
       wrapper.appendChild(clone);
       document.body.appendChild(wrapper);
 
@@ -228,7 +249,7 @@
           margin: 0.5,
           filename: "Tanda_Terima_CM.pdf",
           image: { type: "jpeg", quality: 1 },
-          html2canvas: { scale: 2, backgroundColor: "#ffffff", windowWidth: 800 },
+          html2canvas: { scale: 2, backgroundColor: "#fff", windowWidth: 800 },
           jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
         })
         .from(clone)
@@ -236,13 +257,13 @@
         .then(() => document.body.removeChild(wrapper));
     }
 
-    document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('multiPdf').addEventListener('change', e => {
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("multiPdf").addEventListener("change", e => {
         const count = e.target.files.length;
-        document.getElementById('fileCount').textContent = count ? `📁 ${count} file dipilih` : '';
+        document.getElementById("fileCount").textContent = count ? `📁 ${count} file dipilih` : "";
       });
-      document.getElementById('downloadBtn').addEventListener('click', exportHTMLToPDF);
-      document.getElementById('prosesBtn').addEventListener('click', prosesFile);
+      document.getElementById("prosesBtn").addEventListener("click", prosesFile);
+      document.getElementById("downloadBtn").addEventListener("click", exportHTMLToPDF);
     });
   </script>
 </body>
