--- a/formserahterima.html
+++ b/formserahterima.html
@@ -130,32 +130,36 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
     let dataTabel = [];
 
-   function extractFromPDFText(text) {
+  function extractFromPDFText(text) {
   const lines = text.split('\n').map(line => line.trim());
   let namaUker = "";
 
-  // Prioritas 1: cari baris mengandung 'unit kerja'
-  const lineWithUker = lines.find(line => /unit\s*kerja/i.test(line));
-  if (lineWithUker) {
-    const match = lineWithUker.match(/unit\s*kerja\s*[:\-]?\s*(.*)/i);
-    namaUker = match && match[1] ? match[1].trim() : lineWithUker;
+  // Coba ambil dari baris yang mengandung 'unit kerja:' langsung
+  const ukerLine = lines.find(line => /unit\s*kerja\s*[:\-]/i.test(line));
+  if (ukerLine) {
+    const match = ukerLine.match(/unit\s*kerja\s*[:\-]\s*(.*)/i);
+    if (match && match[1]) {
+      namaUker = match[1].trim();
+    }
+  } else {
+    // Fallback: cari baris setelah baris 'unit kerja'
+    const index = lines.findIndex(line => /unit\s*kerja/i.test(line));
+    if (index !== -1 && lines[index + 1]) {
+      namaUker = lines[index + 1].trim();
+    }
   }
 
-  // Prioritas 2: fallback cari baris dengan 'kantor cabang' atau 'kcp'
-  if (!namaUker) {
-    const fallback = lines.find(line =>
-      /(kantor\s*cabang|kcp|upt|unit pelayanan|cabang|kc\s+)/i.test(line)
-    );
-    if (fallback) namaUker = fallback.trim();
+  if (!namaUker || /unit\s*kerja/i.test(namaUker)) {
+    namaUker = "Tidak ditemukan";
   }
 
-  // Jika tetap kosong
-  if (!namaUker) namaUker = "Tidak ditemukan";
-
-  // --- Tanggal Pekerjaan ---
   let tanggalTiket = "";
   const tanggalTiketMatch = text.match(/Tanggal.*?:\s*(\d{2}[\/\-]\d{2}[\/\-]\d{4})/);
-  tanggalTiket = tanggalTiketMatch ? tanggalTiketMatch[1] : "Tidak ditemukan";
+  if (tanggalTiketMatch) {
+    tanggalTiket = tanggalTiketMatch[1];
+  } else {
+    tanggalTiket = "Tidak ditemukan";
+  }
 
   return { namaUker, tanggalPekerjaan: tanggalTiket };
 }
