--- a/formserahterima.html
+++ b/formserahterima.html
@@ -143,15 +143,20 @@
     }
   }
 
-  // 2. Fallback: baris setelah 'unit kerja'
+  // 2. Fallback: gabungkan beberapa baris setelah 'unit kerja'
   if (!namaUker) {
     const index = lines.findIndex(line => /unit\s*kerja/i.test(line));
     if (index !== -1) {
+      const collected = [];
       for (let i = index + 1; i < lines.length; i++) {
-        if (lines[i] && !/unit\s*kerja/i.test(lines[i])) {
-          namaUker = lines[i].replace(/^[:\s]+/, '').trim();
-          break;
+        const line = lines[i];
+        if (/^(tanggal|pelapor|jenis perangkat|asset id|kantor cabang)/i.test(line)) break;
+        if (line && !/unit\s*kerja/i.test(line)) {
+          collected.push(line);
         }
+      }
+      if (collected.length) {
+        namaUker = collected.join(' ').replace(/^[:\s]+/, '').trim();
       }
     }
   }
