--- a/formserahterima.html
+++ b/formserahterima.html
@@ -237,7 +237,7 @@ async function exportToPDF(dataTabel) {
   // Signature Section
   y += 40;
   const signHeaders = ["TTD TEKNISI", "TTD LEADER", "TTD CALL CENTER"];
-  const signBoxWidth = (usableWidth - 2) / 3;
+  const signBoxWidth = (usableWidth - 2) / 3; // otomatis rata
   const signBoxHeight = 80;
 
   // Draw header
