--- a/formserahterima.html
+++ b/formserahterima.html
@@ -1,109 +1,93 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="color-scheme" content="light only" />
+  <meta charset="UTF-8">
   <title>Form Tanda Terima CM</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
-      font-family: Calibri, sans-serif;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
       background-color: #fff;
       color: #000;
-      margin: 0;
-      padding: 0;
-      text-align: center;
     }
 
     .container {
-      max-width: 720px;
+      max-width: 800px;
       margin: auto;
-      padding: 20px;
     }
 
     h1 {
       font-size: 28px;
-      margin-bottom: 12px;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
 
-    label {
-      font-size: 16px;
-    }
-
-    input[type="date"] {
-      font-size: 16px;
-      padding: 6px 10px;
-      margin: 10px auto;
-    }
-
-    .upload-label {
-      display: inline-block;
-      background: #007bff;
-      color: white;
-      padding: 10px 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      margin: 12px 6px;
+    .form-control {
+      margin: 10px 0;
     }
 
     input[type="file"] {
       display: none;
     }
 
-    button {
-      background: #007bff;
+    label.upload-label {
+      background-color: #007bff;
       color: white;
-      padding: 10px 16px;
-      border: none;
-      font-size: 16px;
-      border-radius: 6px;
-      margin: 8px;
+      padding: 10px 20px;
       cursor: pointer;
+      border-radius: 6px;
     }
 
-    #fileCount {
-      font-weight: bold;
-      margin-left: 10px;
+    .button-group button {
+      padding: 10px 16px;
+      margin: 5px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+    }
+
+    .button-group button:hover {
+      background-color: #0056b3;
+    }
+
+    .table-container {
+      margin-top: 40px;
+      overflow-x: auto;
     }
 
     table {
-      width: 100%;
       border-collapse: collapse;
+      width: 100%;
+      margin: auto;
       font-size: 14px;
     }
 
     th, td {
-      border: 1px solid black;
+      border: 1px solid #000;
       padding: 8px;
+      text-align: center;
     }
 
     th {
       text-transform: uppercase;
-      font-weight: bold;
+      font-size: 14px;
     }
 
-    #exportArea {
-      max-width: 800px;
-      margin: 30px auto;
-      background: #fff;
-      color: #000;
-      padding: 10px;
+    .sign-table td {
+      height: 80px;
     }
 
-    @media print {
+    @media (prefers-color-scheme: dark) {
       body {
-        -webkit-print-color-adjust: exact !important;
-        print-color-adjust: exact !important;
-        background: #ffffff !important;
-        color: #000000 !important;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        padding: 12px;
+        background-color: #fff;
+        color: #000;
       }
     }
   </style>
@@ -111,274 +95,208 @@
 <body>
   <div class="container">
     <h1>Form Tanda Terima CM</h1>
-    <label for="tanggalSerah">Tanggal Serah Terima:</label><br />
-    <input type="date" id="tanggalSerah" />
 
-    <br />
-    <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
-    <input type="file" id="multiPdf" multiple accept="application/pdf" />
-    <span id="fileCount"></span>
+    <div class="form-control">
+      <label for="tanggalSerah">Tanggal Serah Terima:</label>
+      <input type="date" id="tanggalSerah">
+    </div>
 
-    <br />
-    <button id="prosesBtn">Proses</button>
-    <button id="downloadBtn" style="display: none">Download PDF</button>
+    <div class="form-control">
+      <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
+      <input type="file" id="multiPdf" multiple>
+      <span id="jumlahFile">0 file dipilih</span>
+    </div>
 
-    <div id="tabelHasil"></div>
+    <div class="button-group">
+      <button onclick="prosesFile()">Proses</button>
+      <button onclick="downloadPDF()">Download PDF</button>
+    </div>
+
+    <div class="table-container">
+      <div id="tabelHasil"></div>
+    </div>
   </div>
 
   <script>
-    pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
     let dataTabel = [];
 
-function extractFromPDFText(text) {
-  const lines = text.split('\n').map(line => line.trim()).filter(Boolean);
-  let namaUker = "";
+    function extractFromPDFText(text) {
+      const lines = text.split('\n').map(line => line.trim()).filter(Boolean);
+      let namaUker = "";
 
-  // 1. Coba cari dari baris dengan 'unit kerja:'
-  const ukerLine = lines.find(line => /unit\s*kerja\s*[:\-]/i.test(line));
-  if (ukerLine) {
-    const match = ukerLine.match(/unit\s*kerja\s*[:\-]\s*(.*)/i);
-    if (match && match[1]) {
-      namaUker = match[1].replace(/^[:\s]+/, '').trim();
-    }
-  }
-
-  // 2. Fallback: gabungkan beberapa baris setelah 'unit kerja'
-  if (!namaUker) {
-    const index = lines.findIndex(line => /unit\s*kerja/i.test(line));
-    if (index !== -1) {
-      const collected = [];
-      for (let i = index + 1; i < lines.length; i++) {
-        const line = lines[i];
-        if (/^(tanggal|pelapor|jenis perangkat|asset id|kantor cabang)/i.test(line)) break;
-        if (line && !/unit\s*kerja/i.test(line)) {
-          collected.push(line);
+      const ukerLine = lines.find(line => /unit\s*kerja\s*[:\-]/i.test(line));
+      if (ukerLine) {
+        const match = ukerLine.match(/unit\s*kerja\s*[:\-]\s*(.*)/i);
+        if (match && match[1]) {
+          namaUker = match[1].replace(/^[:\s]+/, '').trim();
         }
       }
-      if (collected.length) {
-        namaUker = collected.join(' ').replace(/^[:\s]+/, '').trim();
+
+      if (!namaUker) {
+        const index = lines.findIndex(line => /unit\s*kerja/i.test(line));
+        if (index !== -1) {
+          const collected = [];
+          for (let i = index + 1; i < lines.length; i++) {
+            const line = lines[i];
+            if (/^(tanggal|pelapor|jenis perangkat|asset id|kantor cabang)/i.test(line)) break;
+            if (line && !/unit\s*kerja/i.test(line)) collected.push(line);
+          }
+          if (collected.length) {
+            namaUker = collected.join(' ').replace(/^[:\s]+/, '').trim();
+          }
+        }
       }
-    }
-  }
 
-  // 3. Fallback: cari nama uker berdasarkan kata kunci umum (gabungkan beberapa baris jika memungkinkan)
-  if (!namaUker) {
-    const keywordIndex = lines.findIndex(line =>
-      /(BRI|ENTERPRISE|SYNDICATION|MANAGEMENT|LOGISTIC|CORPORATE|ACCOUNTING|TRANSFORMATION|PROCUREMENT)/i.test(line)
-    );
-    if (keywordIndex !== -1) {
-      const collected = [];
-      for (let i = keywordIndex; i < lines.length; i++) {
-        const line = lines[i];
-        if (/^(tanggal|pelapor|jenis perangkat|asset id|kantor cabang)/i.test(line)) break;
-        collected.push(line);
+      if (!namaUker) {
+        const keywordIndex = lines.findIndex(line =>
+          /(BRI|ENTERPRISE|SYNDICATION|MANAGEMENT|LOGISTIC|CORPORATE|ACCOUNTING|TRANSFORMATION|PROCUREMENT)/i.test(line)
+        );
+        if (keywordIndex !== -1) {
+          const collected = [];
+          for (let i = keywordIndex; i < lines.length; i++) {
+            const line = lines[i];
+            if (/^(tanggal|pelapor|jenis perangkat|asset id|kantor cabang)/i.test(line)) break;
+            collected.push(line);
+          }
+          if (collected.length) {
+            namaUker = collected.join(' ').replace(/^[:\s]+/, '').trim();
+          }
+        }
       }
-      if (collected.length) {
-        namaUker = collected.join(' ').replace(/^[:\s]+/, '').trim();
-      }
+
+      if (!namaUker) namaUker = "Tidak ditemukan";
+
+      const tanggalTiketMatch = text.match(/Tanggal.*?:\s*(\d{2}[\/\-]\d{2}[\/\-]\d{4})/i);
+      const tanggalPekerjaan = tanggalTiketMatch ? tanggalTiketMatch[1] : "Tidak ditemukan";
+
+      return { namaUker, tanggalPekerjaan };
     }
-  }
-
-  if (!namaUker) {
-    namaUker = "Tidak ditemukan";
-  }
-
-  // Tanggal Pekerjaan
-  let tanggalTiket = "";
-  const tanggalTiketMatch = text.match(/Tanggal.*?:\s*(\d{2}[\/\-]\d{2}[\/\-]\d{4})/);
-  tanggalTiket = tanggalTiketMatch ? tanggalTiketMatch[1] : "Tidak ditemukan";
-
-  return { namaUker, tanggalPekerjaan: tanggalTiket };
-}
-
-// ======================== PDF EXPORT FINAL ==========================
-async function exportToPDF(dataTabel) {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF({ unit: 'pt', format: 'a4' });
-  const margin = 40;
-  const pageWidth = doc.internal.pageSize.getWidth();
-  const usableWidth = pageWidth - 2 * margin;
-
-  // Define column widths (total must not exceed usableWidth)
-  const colWidths = [40, 110, 240, 110];
-  const header = ["NO.", "TANGGAL SERAH TERIMA", "NAMA UKER", "TANGGAL PEKERJAAN"];
-
-  let y = 60;
-
-  doc.setFont("Helvetica", "bold");
-  doc.setFontSize(18);
-  doc.text("FORM TANDA TERIMA CM", pageWidth / 2, y, { align: 'center' });
-
-  y += 30;
-
-  doc.setFontSize(12);
-  doc.setFont("Helvetica", "bold");
-
-  // Header
-  let x = margin;
-  for (let i = 0; i < header.length; i++) {
-    doc.text(header[i], x + 2, y);
-    x += colWidths[i];
-  }
-
-  // Rows
-  y += 10;
-  doc.setFont("Helvetica", "normal");
-  dataTabel.forEach((row, idx) => {
-    const values = [String(row.no), row.tanggalSerah, row.namaUker, row.tanggalPekerjaan];
-    x = margin;
-    y += 18;
-    for (let i = 0; i < values.length; i++) {
-      doc.text(values[i], x + 2, y);
-      x += colWidths[i];
-    }
-  });
-
-  // Signature Section
-  y += 40;
-  const signHeaders = ["TTD TEKNISI", "TTD LEADER", "TTD CALL CENTER"];
-  const signBoxWidth = (usableWidth - 2) / 3; // otomatis rata
-  const signBoxHeight = 80;
-
-  // Draw header
-  x = margin;
-  doc.setFont("Helvetica", "bold");
-  for (let i = 0; i < signHeaders.length; i++) {
-    doc.text(signHeaders[i], x + signBoxWidth / 2, y, { align: "center" });
-    x += signBoxWidth;
-  }
-
-  y += 5;
-
-  // Draw boxes
-  x = margin;
-  y += 5;
-  for (let i = 0; i < signHeaders.length; i++) {
-    doc.rect(x, y, signBoxWidth, signBoxHeight);
-    x += signBoxWidth;
-  }
-
-  doc.save("Tanda_Terima_CM.pdf");
-}
-
-
-
-
 
     async function prosesFile() {
-      const files = document.getElementById("multiPdf").files;
-      const tgl = document.getElementById("tanggalSerah").value;
-      if (!files.length || !tgl) return alert("Isi tanggal dan pilih file PDF.");
+      const input = document.getElementById('multiPdf');
+      const files = input.files;
+      const tanggalSerah = document.getElementById('tanggalSerah').value;
+      if (!files.length || !tanggalSerah) return alert("Isi tanggal dan upload PDF");
 
-      const [y, m, d] = tgl.split("-");
-      const formattedTgl = `${d}/${m}/${y}`;
+      const [y, m, d] = tanggalSerah.split("-");
+      const tglSerahFormatted = `${d}/${m}/${y}`;
       dataTabel = [];
 
       for (let i = 0; i < files.length; i++) {
-        const buffer = await files[i].arrayBuffer();
-        const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
+        const arrayBuffer = await files[i].arrayBuffer();
+        const pdf = await pdfjsLib.getDocument({ data: arrayBuffer }).promise;
         let fullText = "";
         for (let j = 1; j <= pdf.numPages; j++) {
           const page = await pdf.getPage(j);
           const content = await page.getTextContent();
-          fullText += content.items.map(item => item.str).join("\n");
+          fullText += content.items.map(item => item.str).join('\n');
         }
 
         const { namaUker, tanggalPekerjaan } = extractFromPDFText(fullText);
         dataTabel.push({
           no: i + 1,
-          tanggalSerah: formattedTgl,
+          tanggalSerah: tglSerahFormatted,
           namaUker,
           tanggalPekerjaan
         });
       }
 
       tampilkanTabel();
-      document.getElementById("downloadBtn").style.display = "inline-block";
+      document.getElementById("jumlahFile").textContent = `${files.length} file dipilih`;
     }
 
     function tampilkanTabel() {
-      const div = document.getElementById("tabelHasil");
-      const rows = dataTabel
-        .map(
-          row => `
-        <tr>
-          <td>${row.no}</td>
-          <td>${row.tanggalSerah}</td>
-          <td>${row.namaUker}</td>
-          <td>${row.tanggalPekerjaan}</td>
-        </tr>`
-        )
-        .join("");
-
-      div.innerHTML = `
-        <div id="exportArea">
-          <h2 style="text-align:center; font-size:22px;">FORM TANDA TERIMA CM</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>NO.</th>
-                <th>TANGGAL SERAH TERIMA</th>
-                <th>NAMA UKER</th>
-                <th>TANGGAL PEKERJAAN</th>
-              </tr>
-            </thead>
-            <tbody>${rows}</tbody>
-          </table>
-          <br>
-          <table>
+      const tableHTML = `
+      <h2>FORM TANDA TERIMA CM</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>NO.</th>
+            <th>TANGGAL SERAH TERIMA</th>
+            <th>NAMA UKER</th>
+            <th>TANGGAL PEKERJAAN</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${dataTabel.map(row => `
             <tr>
-              <th style="width: 33.33%;">TTD TEKNISI</th>
-              <th style="width: 33.33%;">TTD LEADER</th>
-              <th style="width: 33.33%;">TTD CALL CENTER</th>
+              <td>${row.no}</td>
+              <td>${row.tanggalSerah}</td>
+              <td>${row.namaUker}</td>
+              <td>${row.tanggalPekerjaan}</td>
             </tr>
-            <tr style="height: 100px;">
-              <td></td><td></td><td></td>
-            </tr>
-          </table>
-        </div>`;
+          `).join("")}
+        </tbody>
+      </table>
+      <br>
+      <table class="sign-table">
+        <tr>
+          <th>TTD TEKNISI</th>
+          <th>TTD LEADER</th>
+          <th>TTD CALL CENTER</th>
+        </tr>
+        <tr>
+          <td></td><td></td><td></td>
+        </tr>
+      </table>`;
+      document.getElementById('tabelHasil').innerHTML = tableHTML;
     }
 
-    function exportHTMLToPDF() {
-      const el = document.getElementById("exportArea");
-      if (!el) return alert("Klik Proses dulu.");
+    async function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({ unit: 'pt', format: 'a4' });
+      const margin = 40;
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const usableWidth = pageWidth - 2 * margin;
 
-      const clone = el.cloneNode(true);
-      clone.style.background = "#ffffff";
-      clone.style.color = "#000000";
-      clone.querySelectorAll("*").forEach(e => {
-        e.style.background = "#ffffff";
-        e.style.color = "#000000";
-        e.style.borderColor = "#000000";
+      const colWidths = [40, 120, 270, 120]; // total = 550
+      const header = ["NO.", "TANGGAL SERAH TERIMA", "NAMA UKER", "TANGGAL PEKERJAAN"];
+
+      let y = 60;
+      doc.setFont("Helvetica", "bold");
+      doc.setFontSize(18);
+      doc.text("FORM TANDA TERIMA CM", pageWidth / 2, y, { align: 'center' });
+
+      y += 30;
+      doc.setFontSize(12);
+      let x = margin;
+      for (let i = 0; i < header.length; i++) {
+        doc.text(header[i], x + 2, y);
+        x += colWidths[i];
+      }
+
+      doc.setFont("Helvetica", "normal");
+      dataTabel.forEach(row => {
+        const values = [String(row.no), row.tanggalSerah, row.namaUker, row.tanggalPekerjaan];
+        x = margin;
+        y += 18;
+        for (let i = 0; i < values.length; i++) {
+          doc.text(values[i], x + 2, y);
+          x += colWidths[i];
+        }
       });
 
-      const wrapper = document.createElement("div");
-      wrapper.style.position = "fixed";
-      wrapper.style.left = "-9999px";
-      wrapper.appendChild(clone);
-      document.body.appendChild(wrapper);
+      y += 40;
+      const signHeaders = ["TTD TEKNISI", "TTD LEADER", "TTD CALL CENTER"];
+      const boxWidth = (usableWidth - 2) / 3;
+      const boxHeight = 80;
+      x = margin;
 
-      html2pdf()
-        .set({
-          margin: 0.5,
-          filename: "Tanda_Terima_CM.pdf",
-          image: { type: "jpeg", quality: 1 },
-          html2canvas: { scale: 2, backgroundColor: "#fff", windowWidth: 800 },
-          jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
-        })
-        .from(clone)
-        .save()
-        .then(() => document.body.removeChild(wrapper));
+      doc.setFont("Helvetica", "bold");
+      for (let i = 0; i < signHeaders.length; i++) {
+        doc.text(signHeaders[i], x + boxWidth / 2, y, { align: 'center' });
+        x += boxWidth;
+      }
+
+      y += 10;
+      x = margin;
+      for (let i = 0; i < 3; i++) {
+        doc.rect(x, y, boxWidth, boxHeight);
+        x += boxWidth;
+      }
+
+      doc.save("Tanda_Terima_CM.pdf");
     }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementById("multiPdf").addEventListener("change", e => {
-        const count = e.target.files.length;
-        document.getElementById("fileCount").textContent = count ? `📁 ${count} file dipilih` : "";
-      });
-      document.getElementById("prosesBtn").addEventListener("click", prosesFile);
-      document.getElementById("downloadBtn").addEventListener("click", exportHTMLToPDF);
-    });
   </script>
 </body>
 </html>
